change the wording so that there is only cv and no resume

--- a/index.html
+++ b/index.html
@@ -118,9 +118,7 @@
       <p class="text-2xl">Professional</p>
       <p class="text-sm">
 
-    <a href="Resume.pdf" class="text-[#8563A6] rounded-sm bg-[#282243] transition duration-300 hover:bg-[#e9e0f2] shadow-[0px_0px_300px_68px_rgba(128,99,161,0.5)]" > This</a>
-        links to my professional Resume, and
-    <a href="CV.pdf" class="text-[#8563A6] rounded-sm bg-[#282243] transition duration-300 hover:bg-[#e9e0f2] shadow-[0px_0px_300px_68px_rgba(128,99,161,0.5)]">this</a>
+    <a href="CV.pdf" class="text-[#8563A6] rounded-sm bg-[#282243] transition duration-300 hover:bg-[#e9e0f2] shadow-[0px_0px_300px_68px_rgba(128,99,161,0.5)]">This</a>
         links to my Curriculum Vitae.
       </p>
     </section>
