--- a/index.html
+++ b/index.html
@@ -16,18 +16,7 @@
     <section id="background" class="text-left mb-4 w-1/2">
       <p class="text-2xl text-semibold">Background</p>
       <p class="text-sm">
-        I am an undergraduate student persuing a Computer Science degree at the
-        Univerisy of Manchester. I have a deep passion for many computer science
-        topics and principles. Currently I am intruiged by
-        <a
-          href="https://rubyonrails.org/"
-          class="text-[#8563A6] transition duration-300 hover:bg-[#e9e0f2] rounded-sm"
-          >Ruby on Rails</a
-        >
-        and am learning the framework as well as its guiding principles. At the
-        end of this portfolio you can find some of my projects using the
-        framework; feel free to check them out.
-      </p>
+I am an undergraduate student pursuing a computer science degree at the University of Manchester. I have a deep passion for many computer science topics and principles. At the end of this portfolio you can find some of my projects; feel free to check them out.      </p>
     </section>
 
   <hr class="bg-white h-0.5 border-0 my-4 w-1/2">
