--- a/future index.html
+++ b/future index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-full">
     <head>
         <meta charset="UTF-8" />
         <title>Nikita Kroshko</title>
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
-    <body class="bg-[#0B0A26]">
-        <div class="p-40 content-center text-bold font-mono">
+    <body class="bg-[#0B0A26] h-full flex flex-col">
+        <div class="p-40 content-center text-bold font-mono flex-grow">
             <p class="text-white rounded-xl text-3xl text-center mb-8">
                 Nikita's Portfolio
             </p>
@@ -25,7 +25,7 @@
                 </a>
             </div>
         </div>
-        <footer class="py-4 bg-[#08071a] w-full text-white font-mono">
+        <footer class="py-4 bg-[#08071a] w-full text-white font-mono mt-auto">
             <div
                 class="container mx-auto px-2 flex justify-between items-center"
             >
