add hardware to the title of the hardware portfolio

--- a/hardware.html
+++ b/hardware.html
@@ -8,7 +8,7 @@
   <body class="bg-[#0B0A26]">
     <div class="p-40 content-center text-bold font-mono">
       <p class="text-white rounded-xl text-3xl text-center">
-        Nikita's Portfolio
+        Nikita's Hardware Portfolio
       </p>
     </div>
   </body>
