--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ I am an undergraduate student pursuing a computer science degree at the Universi
       <p class="text-2xl">Professional</p>
       <p class="text-sm">
     <a href="CV_Full_Stack.pdf" class="text-[#8563A6] rounded-sm bg-[#282243] transition duration-300 hover:bg-[#e9e0f2] shadow-[0px_0px_300px_68px_rgba(128,99,161,0.5)]">This</a>
-        links to my Curriculum Vitae.
+        links to my Curriculum Vitae (CV).
       </p>
     </section>
   <hr class="bg-white h-0.5 border-0 my-4 w-1/2">
