update the index with the new projects

--- a/index.html
+++ b/index.html
@@ -162,6 +162,41 @@ I am an undergraduate student pursuing a computer science degree at the Universi
           <a href="https://gitlab.cs.man.ac.uk/2024_comp10120_x10/group_project" class="text-[#8563A6] text-sm transition duration-300 hover:bg-[#e9e0f2] rounded-sm">GitLab (Restricted to University)</a>
         </div>
       </div>
+
+      <div class="mt-4 p-4">
+  <h3 class="text-xl font-semibold">C++ Web Browser</h3>
+  <p class="text-sm mb-2">
+    A desktop web browser built in C++ using Qt Creator, featuring a multi-tab interface, responsive window management, and an intuitive navigation system. The browser integrates the Qt WebEngine module to handle JavaScript execution, HTML/CSS parsing, and WebGL rendering. Additional features include intelligent pop-up blocking, automatic tab renaming, and an efficient browsing history system for a smooth user experience. This project enhanced my understanding of networking APIs, RESTful integration, and event-driven GUI development in a complex desktop environment.
+  </p>
+  <div class="flex flex-wrap gap-2 mb-3">
+    <span class="bg-[#282243] text-xs px-2 py-1 rounded">C++</span>
+    <span class="bg-[#282243] text-xs px-2 py-1 rounded">Qt Creator</span>
+    <span class="bg-[#282243] text-xs px-2 py-1 rounded">Qt WebEngine</span>
+    <span class="bg-[#282243] text-xs px-2 py-1 rounded">GUI Programming</span>
+    <span class="bg-[#282243] text-xs px-2 py-1 rounded">REST APIs</span>
+  </div>
+  <div class="flex space-x-4">
+    <a href="https://github.com/your-repo-link" class="text-[#8563A6] text-sm transition duration-300 hover:bg-[#e9e0f2] rounded-sm">GitHub Repository</a>
+  </div>
+</div>
+
+<div class="mt-4 p-4">
+  <h3 class="text-xl font-semibold">MU0 Processor Implementation</h3>
+  <p class="text-sm mb-2">
+    Designed and implemented the MU0 processor in Verilog, complete with a fully functional ALU and support for the full MU0 instruction set. Verified performance using Questa simulations and comprehensive testbenches to ensure accuracy and stability across all operations. The processor was successfully deployed on an FPGA board, confirming real hardware execution. This project deepened my expertise in computer architecture, digital logic design, and practical FPGA workflows.
+  </p>
+  <div class="flex flex-wrap gap-2 mb-3">
+    <span class="bg-[#282243] text-xs px-2 py-1 rounded">Verilog</span>
+    <span class="bg-[#282243] text-xs px-2 py-1 rounded">FPGA</span>
+    <span class="bg-[#282243] text-xs px-2 py-1 rounded">QuestaSim</span>
+    <span class="bg-[#282243] text-xs px-2 py-1 rounded">Digital Logic</span>
+    <span class="bg-[#282243] text-xs px-2 py-1 rounded">Computer Architecture</span>
+  </div>
+  <div class="flex space-x-4">
+    <a href="#" class="text-[#8563A6] text-sm transition duration-300 hover:bg-[#e9e0f2] rounded-sm">MU0 Reference (Internal)</a>
+  </div>
+</div>
+
     </section>
     <footer class="py-4 bg-[#08071a] w-full">
       <div class="container mx-auto px-2 flex justify-between items-center">
