update the link with the proper link instead of a placeholder

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ I am an undergraduate student pursuing a computer science degree at the Universi
     <span class="bg-[#282243] text-xs px-2 py-1 rounded">REST APIs</span>
   </div>
   <div class="flex space-x-4">
-    <a href="https://github.com/your-repo-link" class="text-[#8563A6] text-sm transition duration-300 hover:bg-[#e9e0f2] rounded-sm">GitHub Repository</a>
+    <a href="https://github.com/NikitaKroshko/WebBrowser" class="text-[#8563A6] text-sm transition duration-300 hover:bg-[#e9e0f2] rounded-sm">GitHub Repository</a>
   </div>
 </div>
 
@@ -191,9 +191,6 @@ I am an undergraduate student pursuing a computer science degree at the Universi
     <span class="bg-[#282243] text-xs px-2 py-1 rounded">QuestaSim</span>
     <span class="bg-[#282243] text-xs px-2 py-1 rounded">Digital Logic</span>
     <span class="bg-[#282243] text-xs px-2 py-1 rounded">Computer Architecture</span>
-  </div>
-  <div class="flex space-x-4">
-    <a href="#" class="text-[#8563A6] text-sm transition duration-300 hover:bg-[#e9e0f2] rounded-sm">MU0 Reference (Internal)</a>
   </div>
 </div>
 
