Change hte background to be hardware focused

--- a/hardware.html
+++ b/hardware.html
@@ -16,7 +16,7 @@
     <section id="background" class="text-left mb-4 w-1/2">
       <p class="text-2xl text-semibold">Background</p>
       <p class="text-sm">
-I am an undergraduate student pursuing a computer science degree at the University of Manchester. I have a deep passion for many computer science topics and principles. At the end of this portfolio you can find some of my projects; feel free to check them out.      </p>
+          I am an undergraduate student pursuing a computer science degree at the University of Manchester, with a strong focus on hardware and computer architecture. I am passionate about digital systems, processor design, and low-level programming. At the end of this portfolio you can find some of my hardware-related projects; feel free to check them out.      </p>
     </section>
   <hr class="bg-white h-0.5 border-0 my-4 w-1/2">
     <section id="skills" class="text-left w-1/2">
