change the naming to be just roles instead of roles portfolio which repeats portfolio twice

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
                     href="software.html"
                     class="text-white bg-[#282243] px-8 py-4 rounded-xl text-xl font-semibold transition duration-300 hover:bg-[#8563A6] hover:shadow-[0px_0px_30px_10px_rgba(128,99,161,0.3)] border-2 border-[#8563A6]"
                 >
-                    Software Roles Portfolio
+                    Software Roles
                 </a>
                 <a
                     href="hardware.html"
                     class="text-white bg-[#282243] px-8 py-4 rounded-xl text-xl font-semibold transition duration-300 hover:bg-[#8563A6] hover:shadow-[0px_0px_30px_10px_rgba(128,99,161,0.3)] border-2 border-[#8563A6]"
                 >
-                    Hardware Roles Portfolio
+                    Hardware Roles
                 </a>
             </div>
         </div>
